# WindowsQuotePro

./: CMakeLists.txt  README.md  editquote.cpp  editquote.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quotes.db
